# ponyca

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindASIO.cmake  FindMsgPack.cmake  FindPython3Libs.cmake  PrecompiledHeader.cmake
common/: commandparser.cpp  commandparser.h  commands.cpp  commands.h  config.cpp  config.h  logging.cpp  logging.h  main.cpp  opcodes.yml  pch.h  player.cpp  player.h  plugins.cpp  plugins.h  singleton.h  stringutils.cpp  stringutils.h  typedefs.h
common/net/: network.cpp  network.h  server.cpp  server.h
common/world/: world.h
plugins/: Admin.py  ponyca.py
server/: main.cpp
tests/: test_config.cpp  test_serialization.cpp
utils/: opcode_generator.py  opcodes.yml  opcodes_generator.py
